--- a/src/libs/cxxtest/.project
+++ b/src/libs/cxxtest/.project
@@ -1,10 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>rocmdr_unittests</name>
+	<name>cxxtest</name>
 	<comment></comment>
 	<projects>
-		<project>cxxtest</project>
-		<project>rocmdrlib</project>
 	</projects>
 	<buildSpec>
 		<buildCommand>
@@ -33,7 +31,7 @@
 				</dictionary>
 				<dictionary>
 					<key>org.eclipse.cdt.make.core.buildLocation</key>
-					<value>${workspace_loc:/rocmdr_unittests/Debug}</value>
+					<value>${workspace_loc:/cxxtest/Debug}</value>
 				</dictionary>
 				<dictionary>
 					<key>org.eclipse.cdt.make.core.cleanBuildTarget</key>
