Added a C library for reading CSV files. Also created a C++ layer on top of libcsv. Added a simple CSV class that reads CSV files that only contains integers. Updated the rocmdr program to just read in CSV files.

--- a/src/libs/libcsv/.project
+++ b/src/libs/libcsv/.project
@@ -1,10 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>rocmdr</name>
+	<name>libcsv</name>
 	<comment></comment>
 	<projects>
-		<project>libcsv</project>
-		<project>rocmdrlib</project>
 	</projects>
 	<buildSpec>
 		<buildCommand>
@@ -33,7 +31,7 @@
 				</dictionary>
 				<dictionary>
 					<key>org.eclipse.cdt.make.core.buildLocation</key>
-					<value>${workspace_loc:/rocmdr/Debug}</value>
+					<value>${workspace_loc:/Debug}</value>
 				</dictionary>
 				<dictionary>
 					<key>org.eclipse.cdt.make.core.cleanBuildTarget</key>
