--- a/src/unittests/.project
+++ b/src/unittests/.project
@@ -5,6 +5,7 @@
 	<projects>
 		<project>cxxtest</project>
 		<project>rocmdrlib</project>
+		<project>libcsv</project>
 	</projects>
 	<buildSpec>
 		<buildCommand>
