--- a/src/libs/CMakeLists.txt
+++ b/src/libs/CMakeLists.txt
@@ -2,3 +2,4 @@ add_subdirectory( dense_hashmap )
 add_subdirectory( libcsv )
 add_subdirectory( librocmdr )
 add_subdirectory( libcxxtest )
+add_subdirectory( libcppthread )
