--- a/src/libs/librocmdr/CMakeLists.txt
+++ b/src/libs/librocmdr/CMakeLists.txt
@@ -1,6 +1,7 @@
 include_directories( "inc" )
 
 include_directories( ${DENSE_HASHMAP_INCLUDE_DIR} )
+include_directories( ${LIBCPPTHREAD_INCLUDE_DIR} )
 
 file( GLOB_RECURSE SRC_LIST "*.cpp" "src/" )
 
