Added pthreads to the list of libraries.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,8 +1,10 @@
+project( rocmdr )
 cmake_minimum_required( VERSION 2.7 )
 
 set( CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/.cmake/modules/" )
 
-project( rocmdr )
+find_package( Pthreads )
+
 set( ROCMDR_VERSION_MAJOR 0 )
 set( ROCMDR_VERSION_MINOR 1 )
 set( ROCMDR_VERSION_PATCH 0 )
