--- a/src/unittests/.cproject
+++ b/src/unittests/.cproject
@@ -27,12 +27,11 @@
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/dense_hashmap/Debug}&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/Debug}&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/libcsv/Debug}&quot;"/>
-									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/librocmdr/Debug}&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/libcxxtest/Debug}&quot;"/>
 								</option>
 								<option id="macosx.cpp.link.option.libs.208007125" name="Libraries (-l)" superClass="macosx.cpp.link.option.libs" valueType="libs">
+									<listOptionValue builtIn="false" value="dense_hashmap"/>
 									<listOptionValue builtIn="false" value="csv"/>
-									<listOptionValue builtIn="false" value="librocmdr"/>
 									<listOptionValue builtIn="false" value="libcxxtest"/>
 								</option>
 								<inputType id="cdt.managedbuild.tool.macosx.cpp.linker.input.932690316" superClass="cdt.managedbuild.tool.macosx.cpp.linker.input">
@@ -76,7 +75,6 @@
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/dense_hashmap}&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/}&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/libcsv}&quot;"/>
-									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/librocmdr}&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/libcxxtest}&quot;"/>
 								</option>
 								<inputType id="cdt.managedbuild.tool.gnu.c.compiler.input.356485998" superClass="cdt.managedbuild.tool.gnu.c.compiler.input"/>
@@ -93,13 +91,7 @@
 						<entry flags="RESOLVED" kind="libraryFile" name="libcxxtest"/>
 					</externalSetting>
 				</externalSettings>
-				<externalSettings containerId="librocmdr;" factoryId="org.eclipse.cdt.core.cfg.export.settings.sipplier">
-					<externalSetting>
-						<entry flags="VALUE_WORKSPACE_PATH" kind="includePath" name="/librocmdr"/>
-						<entry flags="VALUE_WORKSPACE_PATH" kind="libraryPath" name="/librocmdr/Debug"/>
-						<entry flags="RESOLVED" kind="libraryFile" name="librocmdr"/>
-					</externalSetting>
-				</externalSettings>
+				<externalSettings containerId="librocmdr;" factoryId="org.eclipse.cdt.core.cfg.export.settings.sipplier"/>
 				<externalSettings containerId="libcsv;" factoryId="org.eclipse.cdt.core.cfg.export.settings.sipplier">
 					<externalSetting>
 						<entry flags="VALUE_WORKSPACE_PATH" kind="includePath" name="/"/>
