--- a/experiments/cov.params.example
+++ b/experiments/cov.params.example
@@ -1,4 +1,8 @@
---snpbeta 0.3 0.3 0.8 --covariate sex,0.2,binomial,1,0.5 age,0.2,normal,55,7
---snpbeta 0.3 0.3 0.9 --covariate sex,0.2,binomial,1,0.5 age,0.2,normal,55,7
---snpbeta 0.3 0.3 1.0 --covariate sex,0.2,binomial,1,0.5 age,0.2,normal,55,7
---snpbeta 0.3 0.3 1.1 --covariate sex,0.2,binomial,1,0.5 age,0.2,normal,55,7
+--snpbeta 0.3 0.3 1.2
+--covariate sex,0.8,binomial,1,0.5 age,1.0,normal,55,7
+--snpbeta 0.3 0.3 1.3
+--covariate sex,0.8,binomial,1,0.5 age,1.0,normal,55,7
+--snpbeta 0.3 0.3 1.4
+--covariate sex,0.8,binomial,1,0.5 age,1.0,normal,55,7
+--snpbeta 0.3 0.3 1.5
+--covariate sex,0.8,binomial,1,0.5 age,1.0,normal,55,7
